--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,24 +30,24 @@ dependencies:
   flutter:
     sdk: flutter
   form_field_validator: ^1.0.1
-  dio: ^4.0.4
-  flutter_secure_storage: ^5.0.2
+  dio: ^3.0.10
+  flutter_secure_storage: ^3.3.5
   
   provider: ^4.3.2+3
   #geolocator: ^8.0.1 
   #location: ^4.2.0
-  google_maps_flutter: ^2.1.1
-  flutter_polyline_points: ^1.0.0
+  # google_maps_flutter: ^2.1.1
+  # flutter_polyline_points: ^1.0.0
   table_calendar: ^3.0.3
   rolling_switch: ^0.0.2
-  image_picker: ^0.8.0
+  image_picker: ^0.6.7+22
   like_button: ^2.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   intl: ^0.17.0
-  google_fonts: ^2.2.0
+  # google_fonts: ^2.2.0
 
 
 dev_dependencies:
